--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,13 @@ jobs:
     - name: Build project.elf with make
       run: make
 
-    - name: Upload project.elf as artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: project-elf-binary
-        path: project.elf
+    - name: List files in workspace
+      run: |
+	echo "Aktuelles Verzeichnis:"
+	pwd
+	echo "Dateien und ordner (rekursiv):"
+	ls -lR
+   
 
   release:
     needs: build
